--- a/04-associations.Rmd
+++ b/04-associations.Rmd
@@ -1,2 +1,14 @@
 # Les associations
 
+## Association unidirectionnelle
+
+Définition
+
+Méthodologie
+
+## Association bidirectionnelle
+
+Définition
+
+Méthodologie
+
