--- a/01-bases-java.Rmd
+++ b/01-bases-java.Rmd
@@ -6,7 +6,37 @@ Cette partie comporte principalement des rappels de l'initiation à Java. Les no
 
 Java est un langage qui doit être compilé puis exécuté.  
 
-Un fichier .java porte le nom de sa classe principale. La méthode ``main`` d'une classe est la première ligne qui s'exécute.  
+> Plus de détails sur l'installation de Java et les IDE disponible (\@ref(annexe))
+
+On travaille dans un projet Java, à l'intérieur duquel on organise les fichiers dans des packages.  
+Un **package** est représenté par des dossiers successifs situés dans le *source folder* ou *src*.  
+
+> Par convention, on appelle un package que l'on crée soi-même avec la langue, l'auteur ou groupe d'auteurs, le nom du projet, un mot-clé pour décrire le but du package : `fr.eni.ecole.tp2.metier`, `fr.lsarribouette.monprojetdejeu.test`
+
+Un fichier .java porte le nom de la classe qu'il définit : `MaPremiereClasse.java`
+
+> Par convention, le nom d'une classe est en UpperCamelCase.
+
+La méthode `main` d'une classe est la première ligne qui s'exécute. C'est à l'intérieur de cette classe que s'écrivent les lignes de code à exécuter.
+
+> Les instructions du module peuvent être testées à cet endroit.
+
+Pour bien commencer :
+
+  - Créer un projet : `MonPremierProjet`
+  - Créer un package : `fr.lsarribouette.monpremierprojet`
+  - Créer un fichier : `MaPremiereClasse.java`
+  - Compléter le fichier avec la classe et la méthode `main` :
+  
+```{java, eval=FALSE}
+package fr.lsarribouette.monpremierprojet.mapremiereclasse
+
+public class MaPremiereClasse {
+  public static void main(String[] args) {
+    // instructions
+  }
+}
+```
 
 ## Affichage sur la console
 
@@ -160,8 +190,8 @@ do {
 
 Ce sont des méthodes paramétrables: 
 
-  - les procédures ne renvoient rien
-  - les fonctions renvoient une et une seule valeur
+  - les procédures ne renvoient rien : `void`
+  - les fonctions renvoient une et une seule valeur, avec `return`
 ```{java, eval=FALSE}
 void nomProcedure(parametres potentiels) { 
   instructions; 
@@ -175,8 +205,20 @@ type nomFonction(parametres potentiels) {
 
 > La variable retournée doit être du même type qu'annoncé dans le signature de la fonction.
 
-> Portée des variables et encapsulation : elles sont plus ou moins accessibles dépendant de l'endroit où elles sont déclarées.  
-Par exemple : une variable déclarée dans une fonction sera uniquement accessible à l'intérieur de celle-ci. Une variable déclarée dans le `main`, quant à elle, sera accessible aux méthodes utilisées dans le `main`.
+## Visiblité et encapsulation
+
+La visibilité représente l'accessibilité d'un objet (classes, variables, attributs, méthodes...) :
+
+  - par défaut : limitée au package
+  - public : sans limite (n'importe où)
+  - private : limitée à la classe
+  - protected : limitée à la classe et ses héritières
+
+L'encapsulation détermine la portée d'une variable : elle est plus ou accessible selon le bloc dans lequel elle est déclarée.  
+Par exemple :   
+Une variable déclarée dans une boucle sera uniquement accessible à l'intérieur de celle-ci.
+Une variable déclarée dans une fonction sera uniquement accessible à l'intérieur de celle-ci.  
+Une variable déclarée dans le `main`, quant à elle, sera accessible aux méthodes utilisées dans le `main`.
 
 ## Les exceptions
 
