--- a/11-annexes.Rmd
+++ b/11-annexes.Rmd
@@ -5,7 +5,7 @@
 Conventions : nommage,...
     - projet : en UpperCamelCase
     - package : en minuscules
-    - classe : en UpperCamelCase
+    - classe : en UpperCamelCase, au singulier ?
     - instance : en UpperCamelCase
     - méthode : lowerCamelCase
 
